@@ -24,6 +24,10 @@
                 <configuration>
                     <source>10</source>
                     <target>10</target>
+                    <compilerArgs>
+                        <!-- Fix "package com.sun.tools.example.debug.expr is not visible" issue -->
+                        <arg>--add-exports=jdk.jdi/com.sun.tools.example.debug.expr=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
